# Coral-Emotional-Support-Voice-Agent

./: .gitignore  Dockerfile  README.md  coral-agent.toml  emotional_support_agent.py  pyproject.toml  run_agent.sh
prompts/: support_prompt.yaml  voice_prompt.yaml
utils/: sse.py
